Added notion loader logic and bakend connectivity

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <div id="content">Welcome to Abhyasam! Click a button to start.</div>
+        <div><button onclick="refreshPages()">Refresh Notion</button></div>
     </main>
     <script src="/static/js/script.js"></script>
 </body>
