--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RevisionAI Chat</title>
+  <title>Abhyasam Chat</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css">
-  <link rel="stylesheet" href="/static/css/chat.css">
+  <link rel="stylesheet" href="/css/chat.css">
 </head>
 <body>
   <div id="particles"></div>
@@ -26,8 +26,8 @@
         <button id="refresh-btn" class="action-btn"><i class="fas fa-sync"></i> Refresh Pages</button>
       </div>
       <div class="navigation">
-        <a href="/" class="action-btn"><i class="fas fa-home"></i> Back to Home</a>
-        <a id="quiz-link" href="/quiz" class="action-btn"><i class="fas fa-question-circle"></i> Take Quiz</a>
+        <a href="/index.html" class="action-btn"><i class="fas fa-home"></i> Back to Home</a>
+        <a id="quiz-link" href="/quiz.html" class="action-btn"><i class="fas fa-question-circle"></i> Take Quiz</a>
       </div>
       <div id="chat-area" class="chat-area"></div>
       <div class="input-container">
@@ -42,6 +42,6 @@
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
-  <script src="/static/js/chat.js"></script>
+  <script src="/js/chat.js"></script>
 </body>
 </html>
