--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Abhyasam</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
   <div id="particles"></div>
@@ -32,6 +32,6 @@
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script src="/static/js/index.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
