--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -6,7 +6,7 @@
   <title>Abhyasam Quiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/quiz.css">
+  <link rel="stylesheet" href="/css/quiz.css">
 </head>
 <body>
   <div id="particles"></div>
@@ -37,12 +37,12 @@
         <i class="fas fa-spinner fa-spin"></i> Processing...
       </div>
       <div class="navigation">
-        <a href="/" class="action-btn"><i class="fas fa-home"></i> Home</a>
-        <a href="/chat" class="action-btn"><i class="fas fa-comment-dots"></i> Chat</a>
+        <a href="/index.html" class="action-btn"><i class="fas fa-home"></i> Home</a>
+        <a href="/chat.html" class="action-btn"><i class="fas fa-comment-dots"></i> Chat</a>
       </div>
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script src="/static/js/quiz.js"></script>
+  <script src="/js/quiz.js"></script>
 </body>
 </html>
