--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,11 @@
     <header>
       <h1><i class="fas fa-brain"></i> Abhyasam</h1>
       <p>Revise your Notion notes with interactive quizzes or Q&A</p>
+      
     </header>
+    <div class="divider">
+      <p class="text-center text-sm text-gray-400 mb-6">Note: The backend is hosted on Render's free tier, so initial responses may take a few seconds due to cold starts.</p>
+    </div> 
     <main>
       <div class="controls">
         <select id="page-select" class="input-field">
